# JarvisClaw

./: .gitignore  Makefile  README.md  docker-compose.yml  jarvis.service  pyproject.toml
brain/: __main__.py  config.py  local_stt.py  local_tts.py  memory.py  personality.py  pipewire_io.py  providers.py  session.py  variety.py  wakeword.py
brain/personalities/: __init__.py  jarvis.yaml
brain/tools/: __init__.py  datetime_tool.py  linux_tool.py  system_tool.py  weather_tool.py
daemon/: Cargo.toml  Dockerfile
daemon/src/: clap_detect.rs  listener.rs  main.rs
src/ultratype/: __init__.py  __main__.py  config.py  daemon.py  gui.py  injector.py  llm.py  models.py  notify.py  recorder.py  state.py  transcriber.py  waybar.py
src/ultratype/jarvis/: __init__.py  brain.py  chunker.py  daemon.py  greeting.py  listener.py  memory.py  sounds.py  tts.py  whatsapp.py
systemd/: ultratype-jarvis.service
waybar/: ultratype.sample.json
whatsapp/: .gitignore  package-lock.json  package.json  server.js
