[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ultratype"
version = "0.1.0"
description = "Push-to-talk dictation for Wayland/Hyprland"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
gui = ["PyGObject>=3.50"]

[project.scripts]
ultratype = "ultratype.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ultratype"]
